--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <title>Shortly</title>
     <link rel="stylesheet" type="text/css" href="dist/css/style.min.css">
-    <script src="dist/built.js"></script>
+    <script src="dist/lib.js"></script>
 
   </head>
 
